--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "async": "^0.9.0",
+    "bluebird": "^2.9.24",
+    "escomplex-js": "^1.2.0",
     "find-parent-dir": "^0.3.0",
     "globby": "^2.0.0",
     "is-glob": "^1.1.3",
