--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --opts spec/mocha.opts spec"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +17,8 @@
     "jshint": "^2.6.3",
     "lodash": "^3.6.0",
     "yargs": "^3.7.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.4"
   }
 }
