--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   },
   "devDependencies": {
     "mocha": "^2.2.4"
+  },
+  "krabby": {
+    "tests": ["jshint"],
+    "reports": ["badge"]
   }
 }
